objects/amc__Project__c.object
<CustomObject>
    <fields>
        <fullName>amc__Hours_Remaining_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Remaining Cost field for all related Milestones. (Previously Labelled Hours Remaining Cost)</inlineHelpText>
        <label>Hours Remaining Value (Billable)</label>
        <summarizedField>amc__Milestone__c.amc__Hours_Remaining_Cost__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of non billable hours remaining for this Project</inlineHelpText>
        <label>Hours Remaining - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Remaining Value of the Project Costs based on the Total Hours Remaining</inlineHelpText>
        <label>Hours Remaining Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining__c</fullName>
        <inlineHelpText>Identifies the number of billable hours remaining for this Project. (Previously Labelled Hours Remaining)</inlineHelpText>
        <label>Hours Remaining - Billable</label>
        <summarizedField>amc__Milestone__c.amc__Hours_Remaining__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Scheduled Cost field for all related Milestones. (Previously Labelled Hours Scheduled Cost)</inlineHelpText>
        <label>Hours Scheduled Value (Billable)</label>
        <summarizedField>amc__Milestone__c.amc__Hours_Scheduled_Cost__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of non billable hours scheduled for this Project</inlineHelpText>
        <label>Hours Scheduled - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Scheduled Value of the Project Costs based on Total Hours Scheduled</inlineHelpText>
        <label>Hours Scheduled Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled__c</fullName>
        <inlineHelpText>Identifies the number of billable hours scheduled for this Project. (Previously Labelled Hours Scheduled)</inlineHelpText>
        <label>Hours Scheduled - Billable</label>
        <summarizedField>amc__Milestone__c.amc__Hours_Scheduled__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Include_Expense_Appendix__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether the Expense Appendix should be added to the Billing Event PDF. Note: Only applies to Time &amp; Materials or Fixed Price + Expenses Projects</inlineHelpText>
        <label>Include Expense Appendix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Include_Non_Billable_Time_in_Appendix__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if Non Billable Time Logs should be included on the Billing Event Appendices</inlineHelpText>
        <label>Include Non Billable Time in Appendix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Include_Time_Log_Appendix__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether the Time Log Appendix should be added to the Billing Event PDF. Note: Only applies to Time &amp; Materials Projects</inlineHelpText>
        <label>Include Time Log Appendix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__KPI_End_Date_Variance__c</fullName>
        <formula>amc__Baseline_End_Date__c - amc__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Baseline End Date - End Date</inlineHelpText>
        <label>KPI: End Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__KPI_P_L_Variance__c</fullName>
        <formula>amc__P_L_Scheduled__c - amc__P_L_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates P&amp;L Scheduled - P&amp;L Forecast</inlineHelpText>
        <label>KPI: P&amp;L Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__KPI_Start_Date_Variance__c</fullName>
        <formula>amc__Baseline_Start_Date__c - amc__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Baseline Start Date - Start Date</inlineHelpText>
        <label>KPI: Start Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__KPI_Total_Hours_Variance__c</fullName>
        <formula>amc__Total_Hours_Scheduled__c - (amc__Total_Hours_Completed__c + amc__Total_Hours_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Total Hours Scheduled - (Total Hours Completed + Total Hours Remaining)</inlineHelpText>
        <label>KPI: Total Hours Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Logo_URL__c</fullName>
        <inlineHelpText>URL For the Project that will be displayed alongside the corporate logo (if applicable)</inlineHelpText>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Forecast__c</fullName>
        <formula>amc__Expense_Summary__c +  amc__Material_Costs_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field that summarises Material Costs Completed + Material Costs Remaining</inlineHelpText>
        <label>Material Costs Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Remaining__c</fullName>
        <formula>amc__Material_Costs_Scheduled__c -  amc__Expense_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Costs Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Scheduled__c</fullName>
        <inlineHelpText>Summarises the Material Costs Scheduled field for all related Milestones</inlineHelpText>
        <label>Material Costs Scheduled</label>
        <summarizedField>amc__Milestone__c.amc__Material_Costs_Scheduled__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if the entire Project is Non Billable</inlineHelpText>
        <label>Non Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Old_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old SFDC ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Overtime_Allowed_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if overtime can be applied to the Billable calculations</inlineHelpText>
        <label>Overtime Allowed (Billable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Overtime_Allowed_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if overtime can be applied to the Cost calculations</inlineHelpText>
        <label>Overtime Allowed (Cost)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Overtime_Ratio_Billable__c</fullName>
        <inlineHelpText>Identifies the overtime ratio applied to Billable calculations (e.g. 1.5 equals &apos;Time and a Half&apos;)</inlineHelpText>
        <label>Overtime Ratio (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Overtime_Ratio_Cost__c</fullName>
        <inlineHelpText>Identifies the overtime ratio applied to Cost calculations (e.g. 1.5 equals &apos;Time and a Half&apos;)</inlineHelpText>
        <label>Overtime Ratio (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Actual__c</fullName>
        <formula>IF( ISPICKVAL( amc__Billing_Type__c , &quot;Fixed Price&quot;) , amc__Cost_Budget__c - (amc__Hours_Completed_Value_Cost__c + amc__Actual_Project_Expenses__c + amc__Expense_Summary__c), IF( ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price + Expenses&quot;), (amc__Cost_Budget__c + amc__Actual_Project_Expenses_Billable__c) - (amc__Hours_Completed_Value_Cost__c + amc__Actual_Project_Expenses__c + amc__Expense_Summary__c) , (amc__Hours_Completed_Cost__c + amc__Actual_Project_Expenses_Billable__c + amc__Material_Costs_Scheduled__c) - (amc__Hours_Completed_Value_Cost__c + amc__Actual_Project_Expenses__c + amc__Expense_Summary__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Project based on the Actual figures. If Fixed Price, use the Project Budget, otherwise use the Completed Value Billable - Completed Value Cost + Actual Project Expenses + Mat Costs Completed</inlineHelpText>
        <label>P&amp;L (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Forecast__c</fullName>
        <formula>IF(ISPICKVAL( amc__Billing_Type__c , &quot;Fixed Price&quot;) ,amc__Cost_Budget__c - ( amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + IF(amc__Actual_Project_Expenses__c &gt; amc__Anticipated_Project_Expenses__c, amc__Actual_Project_Expenses__c, amc__Anticipated_Project_Expenses__c) + amc__Expense_Summary__c + amc__Material_Costs_Remaining__c), IF(ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price + Expenses&quot;), (amc__Cost_Budget__c + IF(amc__Actual_Project_Expenses_Billable__c &gt; amc__Anticipated_Project_Expenses__c, amc__Actual_Project_Expenses_Billable__c, amc__Anticipated_Project_Expenses__c)) - (amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + IF(amc__Actual_Project_Expenses__c &gt; amc__Anticipated_Project_Expenses__c, amc__Actual_Project_Expenses__c, amc__Anticipated_Project_Expenses__c) + amc__Expense_Summary__c + amc__Material_Costs_Remaining__c) , ( amc__Hours_Completed_Cost__c + amc__Hours_Remaining_Cost__c + IF(amc__Actual_Project_Expenses_Billable__c &gt; amc__Anticipated_Project_Expenses__c, amc__Actual_Project_Expenses_Billable__c, amc__Anticipated_Project_Expenses__c) + amc__Material_Costs_Scheduled__c) - ( amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + IF(amc__Actual_Project_Expenses__c &gt; amc__Anticipated_Project_Expenses__c, amc__Actual_Project_Expenses__c, amc__Anticipated_Project_Expenses__c) + amc__Expense_Summary__c + amc__Material_Costs_Remaining__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Project based on the Forecast figures (Completed + Remaining). If Fixed Price use Project Budget, otherwise Completed &amp; Remaining Billable - Completed &amp; Billable Costs plus Actual or Anticipated Expenses, whichever is greater</inlineHelpText>
        <label>P&amp;L (Forecast)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Scheduled__c</fullName>
        <formula>IF( ISPICKVAL( amc__Billing_Type__c , &quot;Fixed Price&quot;) , amc__Cost_Budget__c - (amc__Hours_Scheduled_Value_Cost__c + amc__Anticipated_Project_Expenses__c + amc__Material_Costs_Scheduled__c), IF(ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price + Expenses&quot;), (amc__Cost_Budget__c + amc__Anticipated_Project_Expenses__c) - (amc__Hours_Scheduled_Value_Cost__c + amc__Anticipated_Project_Expenses__c + amc__Material_Costs_Scheduled__c) , (amc__Hours_Scheduled_Cost__c + amc__Anticipated_Project_Expenses__c + amc__Material_Costs_Scheduled__c) - (amc__Hours_Scheduled_Value_Cost__c + amc__Anticipated_Project_Expenses__c + amc__Material_Costs_Scheduled__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Project based on the Scheduled figures. If Fixed Price, use the Project Budget, otherwise use the Hours Scheduled Value Billable + Anticipated Expenses, then minus Scheduled Value Cost + Anticipated Project Expenses + Mat Costs</inlineHelpText>
        <label>P&amp;L (Scheduled)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Payment_Terms__c</fullName>
        <inlineHelpText>Identifies the Payment Terms for any related Billing Events</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Pending_Project_Expenses_Billable__c</fullName>
        <inlineHelpText>Identifies the value of all billable Expenses that are pending or submitted, but not yet approved</inlineHelpText>
        <label>Pending Project Expenses (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Pending_Project_Expenses_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the value of all non billable Expenses that are pending or submitted, but not yet approved</inlineHelpText>
        <label>Pending Project Expenses (Non Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Periodic_Billing_Frequency__c</fullName>
        <inlineHelpText>Identifies the frequency the periodic billing should be processed. Please do not add further values to this list.</inlineHelpText>
        <label>Periodic Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
                <value>
                    <fullName>1st &amp; 16th</fullName>
                </value>
                <value>
                    <fullName>4 Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Periodic_Billing_Last_Date__c</fullName>
        <inlineHelpText>Identifies the date of the last periodic billing event</inlineHelpText>
        <label>Periodic Billing Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Periodic_Billing_Next_Date__c</fullName>
        <inlineHelpText>Identifies the date the next periodic billing event will occur</inlineHelpText>
        <label>Periodic Billing Next Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Prevent_Time_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if Time Logs should be prevented from being created for Actions within this Project</inlineHelpText>
        <label>Prevent Time Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Program_Sort_Order__c</fullName>
        <description>Identifies the column order that the Project should appear on the Program Planner</description>
        <inlineHelpText>Identifies the column order that the Project should appear on the Program Planner</inlineHelpText>
        <label>Program Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Program record this Project relates to</inlineHelpText>
        <label>Program</label>
        <referenceTo>amc__Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project_Completion_Status__c</fullName>
        <formula>If(ISPICKVAL(amc__Status__c, &quot;Complete&quot;) , 1 ,If(OR(amc__Total_Hours_Scheduled__c = 0, amc__Total_Hours_Completed__c = 0), If(amc__Total_Actions__c &gt; 0, amc__Complete_Actions__c / amc__Total_Actions__c, 0), amc__Total_Hours_Completed__c / ( amc__Total_Hours_Completed__c + amc__Total_Projected_Hours_Remaining__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Status = Complete, will display 100%. If Hours Completed = 0 will display 0, otherwise Hours Completed / (Hours Completed + Hours Remaining)</inlineHelpText>
        <label>Project Completion Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Project_Day_Rate__c</fullName>
        <inlineHelpText>Select whether the man-hours for this Project are based on the Standard &apos;Day Rate&apos; value or the &apos;Hourly Rate&apos; of the individual Action Owners</inlineHelpText>
        <label>Billing Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Role-based</fullName>
                </value>
                <value>
                    <fullName>Skill-based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Project_Gantt_Image_Link__c</fullName>
        <description>URL to the most recent export of the project&apos;s Gantt Chart exported to PNG</description>
        <label>Project Gantt Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amc__Project_Notes_RT__c</fullName>
        <inlineHelpText>Detailed Notes about the Project</inlineHelpText>
        <label>Project Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Current_User__c</fullName>
        <formula>IF(amc__Project_Owner__r.amc__User__r.Id  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the User viewing the record is the User linked to the Role that is the Project Owner. If true, 1 is displayed, if false, 0 is displayed. This field can be used to create Dynamic List View / Report Filters</inlineHelpText>
        <label>Project Owner Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Expense_Approval_Reqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether the Role specified as the Project Owner on this Project needs to approve Expenses</inlineHelpText>
        <label>Project Owner Expense Approval Reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner_Timesheet_Approval_Reqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether the person specified as the ‘Project Owner’ on the Project record needs to approve Time Logs</inlineHelpText>
        <label>Project Owner Timesheet Approval Reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project_Reference__c</fullName>
        <inlineHelpText>Identifies the reference number for this Project</inlineHelpText>
        <label>Project Reference #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Hours_Remaining_Billable__c</fullName>
        <inlineHelpText>Identifies the projected number of billable hours remaining on all Actions within this Project</inlineHelpText>
        <label>Projected Hours Remaining - Billable</label>
        <summarizedField>amc__Milestone__c.amc__Projected_Hours_Remaining_Billable__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Hours_Remaining_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the projected number of non billable hours remaining on all Actions within this Project</inlineHelpText>
        <label>Projected Hours Remaining - Non Billable</label>
        <summarizedField>amc__Milestone__c.amc__Projected_Hours_Remaining_Non_Billable__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours_Billable__c</fullName>
        <formula>amc__Hours_Completed__c + amc__Projected_Hours_Remaining_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected number of billable hours on all Actions within this Project. Formula: Hours Completed - Billable + Projected Hours Remaining - Billable</inlineHelpText>
        <label>Projected Total Hours - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours_Non_Billable__c</fullName>
        <formula>amc__Hours_Completed_Non_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected number of non billable hours on all Actions within this Project. Formula: Hours Completed - Non Billable + Projected Hours Remaining - Non Billable</inlineHelpText>
        <label>Projected Total Hours - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Projected_Total_Hours__c</fullName>
        <formula>amc__Total_Hours_Completed__c + amc__Total_Projected_Hours_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the total projected hours on all Actions within this Project. Formula: Total Hours Completed + Total Projected Hours Remaining</inlineHelpText>
        <label>Projected Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Purchase_Order_Total_Amount_Outstanding__c</fullName>
        <formula>amc__Purchase_Order_Total_Amount__c -  amc__Purchase_Order_Total_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Order- Total Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Purchase_Order_Total_Amount_Paid__c</fullName>
        <description>Identifies the total amount paid of all Purchase Orders relating to this Project</description>
        <inlineHelpText>Identifies the total amount paid of all Purchase Orders relating to this Project</inlineHelpText>
        <label>Purchase Order - Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Purchase_Order_Total_Amount__c</fullName>
        <description>Identifies the total amount of all Purchase Orders relating to this Project</description>
        <inlineHelpText>Identifies the total amount of all Purchase Orders relating to this Project</inlineHelpText>
        <label>Purchase Order - Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Purchase_Order__c</fullName>
        <inlineHelpText>Identifies the client&apos;s purchase order number for this Project</inlineHelpText>
        <label>Purchase Order #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Retainer_Amount__c</fullName>
        <inlineHelpText>Identifies the Fixed Fee that will be charged periodically if the Billing Cycle is Retainer</inlineHelpText>
        <label>Retainer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Expense_Approval_Reqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether the Role specified as the Expense Approver on the &apos;Incurred By&apos; Role record needs to approve Expenses</inlineHelpText>
        <label>Role Manager Expense Approval Reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Role_Manager_Timesheet_Approval_Reqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether the person specified as the ‘Timesheet Approver’ on the Action Owner’s Role record needs to approve Time Logs</inlineHelpText>
        <label>Role Manager Timesheet Approval Reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Scheduled_Performance__c</fullName>
        <formula>If(  amc__Cost_Budget__c   = 0, &quot;No Measurement&quot;, if((( amc__Cost_Schedule__c +  amc__Material_Costs_Scheduled__c +  amc__Anticipated_Project_Expenses__c  ) / amc__Cost_Budget__c)&lt;0.8,
&quot;Under Project Budget&quot;, 
if((( amc__Cost_Schedule__c +  amc__Material_Costs_Scheduled__c +  amc__Anticipated_Project_Expenses__c) / amc__Cost_Budget__c)&lt;=1,
&quot;Within Project Budget&quot;,
&quot;Over Project Budget&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows performance based on Scheduled Hours &amp; Material Costs &amp; Anticipated Project Expenses</inlineHelpText>
        <label>Scheduled Performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Set_Baseline_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether the Baseline Dates should be updated to reflect the current actual dates. This will update the Project, Milestone and Action Baseline Start Date and Baseline End Date</inlineHelpText>
        <label>Set Baseline Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <inlineHelpText>Earliest Milestone Start Date of all Milestones related to this Project.</inlineHelpText>
        <label>Start Date</label>
        <summarizedField>amc__Milestone__c.amc__Start_Date__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Sub_Category__c</fullName>
        <description>Identifies the sub category this project belongs to</description>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>MVP</fullName>
                    <label>MVP Standard Implementation</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Add-On Engagement</fullName>
                </value>
                <value>
                    <fullName>TA (Technical Architect)</fullName>
                </value>
                <value>
                    <fullName>VSM</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>Partner Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Tax_Amount_Credited__c</fullName>
        <inlineHelpText>Identifies the Tax Amount of all Credit Notes related to this Project</inlineHelpText>
        <label>Tax Amount Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Amount_Invoiced__c</fullName>
        <label>Tax Amount Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Amount_Outstanding__c</fullName>
        <label>Tax Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Amount_Paid__c</fullName>
        <label>Tax Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies which Tax Rate to use if tax is to be applied to the line items relating to this Billing Event</inlineHelpText>
        <label>Tax Label</label>
        <referenceTo>amc__Tax_Rate__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Template__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies this Project is a Template. It will be excluded from pages such as the Whiteboard, Scheduler, Timesheet, etc.</inlineHelpText>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Total_Actions__c</fullName>
        <inlineHelpText>Roll Up Summary: Counts all Actions relating to this Project excluding where the Action Status = Cancelled</inlineHelpText>
        <label>Total Actions</label>
        <summarizedField>amc__Milestone__c.amc__Total_Actions__c</summarizedField>
        <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>